tests/constructor/extra_args.rev
struct Foo {
    a
    b

    fn init(a, b) {
        self.a = a
        self.b = b
    }
}

var foo = Foo(1, 2, 3, 4) // error: wrong arguments number, expected 2 but got 4